@@ -139,6 +139,7 @@ public:
   bool GetPathFromAlbumId(long idAlbum, CStdString& strPath);
   bool GetPathFromSongId(long idSong, CStdString& strPath);
   bool SaveAlbumThumb(const CStdString& strAlbum, const CStdString& strPath, const CStdString& strThumb);
+  bool RefreshMusicDbThumbs(CFileItem* pItem, CFileItemList &items);
   bool GetAlbumsByArtistId(long idArtist, VECALBUMS& albums);
 
 
